--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 <head>
-<title>Deanna Shih</title>
+    <title>Deanna ( ´ ▽ ` )ﾉ</title>
 </head>
 <h1>Hello, world!</h1>
 </html>
