--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-    <title>Deanna ( ´ ▽ ` )ﾉ</title>
+    <title>Deanna (๑꒪▿꒪)*</title>
 </head>
 <h1>Hello, world!</h1>
 </html>
