--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="eng">
+<!-- This is the html for my personal website found at deannajs.github.io-->
 <head>
     <title>Deanna (๑꒪▿꒪)*</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<h1>Hello, world!</h1>
+
+<body>
+    <h1>Hello, world!</h1>
+    <div class="text">
+        asdf
+    </div>
+</body>
 </html>
