--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- This is the html for my personal website found at deannajs.github.io-->
 <head>
     <title>Deanna (๑꒪▿꒪)*</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 
 <body>
