--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="banner">~hello~</div>
     <div class="text">
         asdf
     </div>
