--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 
 <body>
-    <div class="banner">~hello~</div>
-    <div class="para">
-        asdf
-    </div>
+    ~hello~
 </body>
 </html>
