--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Deanna (๑꒪▿꒪)*</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
 </head>
-
+    <div class="banner">~hello~</div>
+    <div class="about">
+        hi! my name is deanna and i'm a computer science major at the university of michigan.
+        i also play cello in the michigan pops orchestra and carillon (i.e. the bells!) in burton and lurie towers on campus.
+        my favorite animal is pigs :(:)
+    </div>
 <body>
 </body>
 </html>
