--- a/index.html
+++ b/index.html
@@ -7,9 +7,51 @@
 </head>
     <div class="banner">~hello~</div>
     <div class="about">
-        hi! my name is deanna and i'm a computer science major at the university of michigan.
+        hi! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
+        i am interested in full-time software engineer roles after graduation.
         i also play cello in the michigan pops orchestra and carillon (i.e. the bells!) in burton and lurie towers on campus.
-        my favorite animal is pigs :(:)
+        my favorite animal is pigs ᕕ〳 ் (oo) ் 〵╯
+    </div>
+
+    <div class="projects and experience">
+
+    </div>
+
+    <div class="classes and extracurriculars">
+        major classes:
+        eecs 280 - Programming and Introductory Data Structures
+        eecs 281 - Data Structures and Algorithms
+        eecs 370 - Computer Organization
+        eecs 388 - Computer Security
+        eecs 398 - Computing for Computer Scientists
+        eecs 482 - Operating Systems
+        eecs 485 - Web Systems
+
+        other classes:
+        physics I (mechanics) & II (e&m)
+        calc 3 (multivariable) & 4 (diffeq)
+        linear algebra
+        carillon 150
+        video game music
+        engaging performance
+
+        extracurriculars:
+        society of women engineers
+            corporate & alumni relations - student coordinator & alumni officer (2018-2019)
+            career fair - receptions chair (2018-2019)
+            career fair - publicity chair (2019-2020)
+        michigan pops orchestra
+        carillon guild
+    </div>
+
+    <div class="photography">
+        I inherited my sister's old dslr. I don't actually know how to use the fancy camera settings; I just like playing around with it.
+        I mostly take pictures of people!
+    </div>
+
+    <div class="contact">
+        You can contact me at deannajs@umich.edu.
+        Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
     </div>
 <body>
 </body>
