--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     </div>
 
     <div class="projects and experience">
+        projects:
+        ¯\_(ツ)_/¯
+        
+        work experience:
+        toyota
+        umtri
+        s.m. wu manufacturing research center
+
+        volunteer experience:
+        ann arbor summer festival
+        aid summer
 
     </div>
 
