--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 
     <div class="tab">
-        <button class="tablinks" onclick="gotoTab(event, 'about')">about</button>
-        <button class="tablinks" onclick="gotoTab(event, 'projects and experience')">projects and experience</button>
-        <button class="tablinks" onclick="gotoTab(event, 'classe and extracurriculars')">classes and extracurriculars</button>
-        <button class="tablinks" onclick="gotoTab(event, 'photography')">photography</button>
-        <button class="tablinks" onclick="gotoTab(event, 'contact')">contact</button>
+        <button class="tablinks" onclick="openTab(event, 'about')">about</button>
+        <button class="tablinks" onclick="openTab(event, 'projects and experience')">projects and experience</button>
+        <button class="tablinks" onclick="openTab(event, 'classe and extracurriculars')">classes and extracurriculars</button>
+        <button class="tablinks" onclick="openTab(event, 'photography')">photography</button>
+        <button class="tablinks" onclick="openTab(event, 'contact')">contact</button>
     </div>
 
     <div id="about" class="tabcontent">
