--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="about" class="tabcontent">
-        hi! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
+        hii! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
         i am interested in full-time software engineer roles after graduation.
         i also play cello in the michigan pops orchestra and carillon (i.e. the bells!) in burton and lurie towers on campus.
         my favorite animal is pigs ᕕ〳 ் (oo) ் 〵╯
