--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <title>Deanna (๑꒪▿꒪)*</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
-    <link type="text/javascript" src="/deanna.js">
 </head>
     <div class="banner">~hello~</div>
-
 
     <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'about')">about</button>
@@ -17,7 +15,7 @@
         <button class="tablinks" onclick="openTab(event, 'contact')">contact</button>
     </div>
 
-    <div id="about" class="tabcontent">
+    <div id="about" class="tabcontent" >
         hi! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
         i am interested in full-time software engineer roles after graduation.
         i also play cello in the michigan pops orchestra and carillon (i.e. the bells!) in burton and lurie towers on campus.
@@ -75,6 +73,9 @@
         You can contact me at deannajs@umich.edu.
         Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
     </div>
+
+    <!-- Load JavaScript -->
+    <script type="text/javascript" src="/deanna.js"></script>
 <body>
 </body>
 </html>
