--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Load JavaScript -->
-    <script type="text/javascript" src="/deanna.js"></script>
+    <script type="text/javascript" src="deanna.js"></script>
 <body>
 </body>
 </html>
