--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="eng">
-<!-- This is the html for my personal website found at deannajs.github.io-->
+
 <head>
     <title>Deanna (๑꒪▿꒪)*</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
 </head>
+
     <div class="banner">~hello~</div>
 
-    <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'about')">about</button>
-        <button class="tablinks" onclick="openTab(event, 'projects and experience')">projects and experience</button>
-        <button class="tablinks" onclick="openTab(event, 'classe and extracurriculars')">classes and extracurriculars</button>
-        <button class="tablinks" onclick="openTab(event, 'photography')">photography</button>
-        <button class="tablinks" onclick="openTab(event, 'contact')">contact</button>
-    </div>
+    <nav>
+        <a href="#about">about</a>
+        <a href="#experience">experience</a>
+        <a href="#projects">projects</a>
+        <a href="#extracurriculars">extracurriculars</a>
+        <a href="#photography">photography</a>
+        <a href="#contact">contact</a>
+    </nav>
 
-    <div id="about" class="tabcontent" >
+    <div id="about">
         hi! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
         i am interested in full-time software engineer roles after graduation.
         i also play cello in the michigan pops orchestra and carillon (i.e. the bells!) in burton and lurie towers on campus.
         my favorite animal is pigs ᕕ〳 ் (oo) ் 〵╯
     </div>
 
-    <div id="projects and experience" class="tabcontent">
+    <div id="projects">
         projects:
         ¯\_(ツ)_/¯
         
@@ -37,7 +38,7 @@
 
     </div>
 
-    <div id="classes and extracurriculars" class="tabcontent">
+    <div id="extracurriculars">
         major classes:
         eecs 280 - Programming and Introductory Data Structures
         eecs 281 - Data Structures and Algorithms
@@ -64,12 +65,12 @@
         carillon guild
     </div>
 
-    <div id="photography" class="tabcontent">
+    <div id="photography">
         I inherited my sister's old dslr. I don't actually know how to use the fancy camera settings; I just like playing around with it.
         I mostly take pictures of people!
     </div>
 
-    <div id="contact" class="tabcontent">
+    <div id="contact">
         You can contact me at deannajs@umich.edu.
         Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
     </div>
