--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
     <div class="banner">~hello~</div>
-
+    hello all
     <nav>
         <a href="#about">about</a>
         <a href="#experience">experience</a>
