--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="#contact">contact</a>
     </nav>
 
+
+    <img src="profilepic.jpg"></img>
     <div id="about">
         hi! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
         i am interested in full-time software engineer roles after graduation.
