--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <img src="profilepic.jpg"></img>
     <div id="about">
-        hi! my name is deanna and i'm a computer science major at the university of michigan (b.s.e. expected may 2020).
-        i am interested in full-time software engineer roles after graduation.
-        i also play cello in the michigan pops orchestra and carillon (i.e. the bells!) in burton and lurie towers on campus.
+        hi! my name is deanna and i recently graduated from the university of michigan with a bse in computer science and a minor in music.
+        i'm currently looking for full-time software engineering roles! i have an interest in video game development, machine learning, and web development.
+        i play the piano, cello, and carillon. 
         my favorite animal is pigs ᕕ〳 ் (oo) ் 〵╯
     </div>
 
@@ -44,10 +44,16 @@
         eecs 280 - Programming and Introductory Data Structures
         eecs 281 - Data Structures and Algorithms
         eecs 370 - Computer Organization
-        eecs 388 - Computer Security
         eecs 398 - Computing for Computer Scientists
+
+        upper levels:
+        eecs 388 - Computer Security
         eecs 482 - Operating Systems
         eecs 485 - Web Systems
+        eecs 445 - Machine Learning
+
+        MDE: 
+        eecs 494 - Video Game Development
 
         other classes:
         physics I (mechanics) & II (e&m)
