--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
 
 
-    <img src="profilepic.jpg"></img>
+    <img src="profilepic.jpg" id="profilepic"></img>
     <div id="about">
         hi! my name is deanna and i recently graduated from the university of michigan with a bse in computer science and a minor in music.
         i'm currently looking for full-time software engineering roles! i have an interest in video game development, machine learning, and web development.
