--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 
     <img src="profilepic.jpg" id="profilepic"></img>
-    <div id="about">
+    <p id="about">
         hi! my name is deanna and i recently graduated from the university of michigan with a bse in computer science and a minor in music.
         i'm currently looking for full-time software engineering roles! i have an interest in video game development, machine learning, and web development.
         i play the piano, cello, and carillon. 
         my favorite animal is pigs ᕕ〳 ் (oo) ் 〵╯
-    </div>
+    </p>
 
-    <div id="projects">
+    <p id="projects">
         projects:
         ¯\_(ツ)_/¯
         
@@ -37,9 +37,9 @@
         ann arbor summer festival
         aid summer
 
-    </div>
+    </p>
 
-    <div id="extracurriculars">
+    <p id="extracurriculars">
         major classes:
         eecs 280 - Programming and Introductory Data Structures
         eecs 281 - Data Structures and Algorithms
@@ -70,17 +70,17 @@
             career fair - publicity chair (2019-2020)
         michigan pops orchestra
         carillon guild
-    </div>
+    </p>
 
-    <div id="photography">
+    <p id="photography">
         I inherited my sister's old dslr. I don't actually know how to use the fancy camera settings; I just like playing around with it.
         I mostly take pictures of people!
-    </div>
+    </p>
 
-    <div id="contact">
+    <p id="contact">
         You can contact me at deannajs@umich.edu.
         Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
-    </div>
+    </p>
 
     <!-- Load JavaScript -->
     <script type="text/javascript" src="deanna.js"></script>
