--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Deanna (๑꒪▿꒪)*</title>
+    <title>Deanna ᕕ〳 ் (oo) ் 〵╯</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="icon" href="pig.png"
 </head>
 
     <div class="banner">~hello~</div>
     <nav>
-        <a href="#about">about</a>
+        <a href="#about me">about me</a>
         <a href="#experience">experience</a>
         <a href="#projects">projects</a>
         <a href="#extracurriculars">extracurriculars</a>
@@ -17,12 +18,11 @@
 
     <img src="profilepic.jpg" class="profilepic"></img>
 
-    <p id="about">
+    <p id="about me">
 
         hi! my name is deanna and i recently graduated from the university of michigan with a bse in computer science and a minor in music.
-        i'm currently looking for full-time software engineering roles! i have an interest in video game development, machine learning, and web development.
-        i play the piano, cello, and carillon. 
-        my favorite animal is pigs ᕕ〳 ் (oo) ் 〵╯
+        i'm currently looking for full-time software engineering roles! i am interested in video game development, machine learning, and web development.
+        i play the piano, cello, and carillon (i.e. the bell tower).
     </p>
 
     <p id="projects">
