--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Deanna ᕕ〳 ் (oo) ் 〵╯</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
-    <link rel="icon" href="pig.png"
+    <link rel="icon" href="pig.png">
 </head>
 
     <div class="banner">~hello~</div>
