--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Deanna ᕕ〳 ் (oo) ் 〵╯</title>
+    <title>Deanna</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="icon" href="pig.png">
 </head>
