--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
         <a href="#about me">about me</a>
         <a href="#experience">experience</a>
         <a href="#projects">projects</a>
-        <a href="#extracurriculars">extracurriculars</a>
-        <a href="#photography">photography</a>
+        <a href="#skills">skills</a>
+        <a href="#interests">interests</a>
         <a href="#contact">contact</a>
     </nav>
 
+<body>
     <img src="profilepic.jpg" class="profilepic"></img>
 
     <p id="about me">
 
         hi! my name is deanna and i recently graduated from the university of michigan with a bse in computer science and a minor in music.
         i'm currently looking for full-time software engineering roles! i am interested in video game development, machine learning, and web development.
-        i play the piano, cello, and carillon (i.e. the bell tower).
     </p>
 
-    <p id="projects">
-        projects:
-        ¯\_(ツ)_/¯
-        
-        work experience:
+    <p id="experience">
+        work: 
         toyota
         umtri
         s.m. wu manufacturing research center
@@ -38,15 +35,19 @@
         ann arbor summer festival
         aid summer
 
+        leadership:
+        society of women engineers
+            corporate & alumni relations - student coordinator & alumni officer (2018-2019)
+            career fair - receptions chair (2018-2019)
+            career fair - publicity chair (2019-2020)
     </p>
 
-    <p id="extracurriculars">
-        major classes:
-        eecs 280 - Programming and Introductory Data Structures
-        eecs 281 - Data Structures and Algorithms
-        eecs 370 - Computer Organization
-        eecs 398 - Computing for Computer Scientists
+    <p id="projects">
+        ezscan
 
+    </p>
+
+    <p id="skills">
         upper levels:
         eecs 388 - Computer Security
         eecs 482 - Operating Systems
@@ -55,36 +56,25 @@
 
         MDE: 
         eecs 494 - Video Game Development
-
-        other classes:
-        physics I (mechanics) & II (e&m)
-        calc 3 (multivariable) & 4 (diffeq)
-        linear algebra
-        carillon 150
-        video game music
-        engaging performance
-
-        extracurriculars:
-        society of women engineers
-            corporate & alumni relations - student coordinator & alumni officer (2018-2019)
-            career fair - receptions chair (2018-2019)
-            career fair - publicity chair (2019-2020)
-        michigan pops orchestra
-        carillon guild
     </p>
 
-    <p id="photography">
-        I inherited my sister's old dslr. I don't actually know how to use the fancy camera settings; I just like playing around with it.
-        I mostly take pictures of people!
+    <p id="intersts">
+        piano
+        cello - michigan pops orchestra
+        carillon - carillon guild
+        photography
+        foreign languages 
     </p>
+
+
 
     <p id="contact">
         You can contact me at deannajs@umich.edu.
         Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
     </p>
 
+
+</body>
     <!-- Load JavaScript -->
     <script type="text/javascript" src="deanna.js"></script>
-<body>
-</body>
 </html>
