--- a/index.html
+++ b/index.html
@@ -21,44 +21,42 @@
 
     <p id="about me">
 
-        hi! my name is deanna and i recently graduated from the university of michigan with a bse in computer science and a minor in music.
-        i'm currently looking for full-time software engineering roles! i am interested in video game development, machine learning, and web development.
+        Hi! My name is deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+        <br>
+        I'm currently looking for full-time software engineering roles! 
+        <br>
+        I am interested in video game development and machine learning. :)
     </p>
 
     <p id="experience">
-        work: 
-        toyota
-        umtri
-        s.m. wu manufacturing research center
+        work <br>
+        TOYOTA Summer 2019 <br>
+        UMTRI (University of Michigan Transportation Research Institute) Summer 2018<br>
+        University of Michigan S.M. Wu Manufacturing Research Center Summer 2017 <br>
 
-        volunteer experience:
-        ann arbor summer festival
-        aid summer
+        leadership <br>
+        society of women engineers <br>
+            corporate & alumni relations - student coordinator & alumni officer (2018-2019) <br>
+            career fair - receptions chair (2018-2019) <br>
+            career fair - publicity chair (2019-2020) <br>
 
-        leadership:
-        society of women engineers
-            corporate & alumni relations - student coordinator & alumni officer (2018-2019)
-            career fair - receptions chair (2018-2019)
-            career fair - publicity chair (2019-2020)
+        volunteer <br>
+        ann arbor summer festival <br>
+        aid summer <br>
     </p>
 
     <p id="projects">
+        video game portfolio
         ezscan
-
     </p>
 
     <p id="skills">
-        upper levels:
-        eecs 388 - Computer Security
-        eecs 482 - Operating Systems
-        eecs 485 - Web Systems
-        eecs 445 - Machine Learning
-
-        MDE: 
-        eecs 494 - Video Game Development
+        relevant coursework: video game development, machine learning, web systems, operating systems, computer security
+        languages:
+        software:
     </p>
 
-    <p id="intersts">
+    <p id="interests">
         piano
         cello - michigan pops orchestra
         carillon - carillon guild
