--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
     <p id="about me">
 
-        Hi! My name is deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
-        <br>
+        Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+        <br><br>
         I'm currently looking for full-time software engineering roles! 
-        <br>
-        I am interested in video game development and machine learning. :)
+        I am interested in video game development and machine learning.
     </p>
 
     <p id="experience">
