--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="profilepic.jpg" class="profilepic"></img>
 
     <p id="about me">
-
+        <div id="title">about me</div>
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
         I'm currently looking for full-time software engineering roles! 
