--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <img src="profilepic.jpg" class="profilepic"></img>
-    <div id="title">about me</div>
+    <div id="sec_header">about me</div>
 
     <p id="about me">
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
