--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <link rel="icon" href="pig.png">
 </head>
 
-<div class=bar> </div>
-<div class="banner">~hello~</div>
+<div class="banner">
+    DEANNA SHIH
+    bse computer science 
+    university of michigan '20
+</div>
+
 <nav>
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
