--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 
 <div class="banner">
-    DEANNA SHIH
+    <div id="name"> DEANNA SHIH </div>
+    <div id="subname">
     bse computer science 
     university of michigan '20
+    </div>
 </div>
 
 <nav>
