--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="banner">
     <div id="name"> DEANNA SHIH </div>
     <div id="subname">
-    bse computer science 
+    bse computer science <br>
     university of michigan '20
     </div>
 </div>
