--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <div class="banner">
-    <div id="name"> DEANNA SHIH </div>
-    <div id="subname">
+    <span id="name"> DEANNA SHIH </span>
+    <span id="subname">
     bse computer science <br>
     university of michigan '20
-    </div>
+    </span>
 </div>
 
 <nav>
