--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <div class="banner">
-    <span id="name"> DEANNA SHIH </span>
+    <span id="name"> DEANNA SHIH <br> </span>
     <span id="subname">
-    <br>
     bse computer science <br>
     university of michigan '20
     </span>
@@ -28,8 +27,8 @@
 <body>
     <div id="sec_header">about me</div>
 
+    <img src="profilepic.jpg" class="profilepic" />
     <p id="about me">
-        <img src="profilepic.jpg" class="profilepic"></img>
 
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
