--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <div id="sec_header">about me</div>
 
-    <img src="profilepic.jpg" class="profilepic"/>
+    <img src="profilepic.jpg" class="profilepic"> </img>
     <p id="about me">
 
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
