--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </nav>
 
 <body>
-    <div id="sec_header">about me</div>
 
-    <img src="profilepic.jpg" class="profilepic"> </img>
+    <img src="profilepic.jpg" class="profilepic"></img>
     <p id="about me">
+        <span class="section_header">about me</span>
 
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
@@ -37,6 +37,7 @@
     </p>
 
     <p id="experience">
+        <span class="section_header">experience</span>
         work <br>
         TOYOTA Summer 2019 <br>
         UMTRI (University of Michigan Transportation Research Institute) Summer 2018<br>
@@ -54,17 +55,23 @@
     </p>
 
     <p id="projects">
+        <span class="section_header">projects</span>
+
         video game portfolio
         ezscan
     </p>
 
     <p id="skills">
+        <span class="section_header">skills</span>
+
         relevant coursework: video game development, machine learning, web systems, operating systems, computer security
         languages:
         software:
     </p>
 
     <p id="interests">
+        <span class="section_header">interests</span>
+
         piano
         cello - michigan pops orchestra
         carillon - carillon guild
@@ -75,6 +82,8 @@
 
 
     <p id="contact">
+        <span class="section_header">contact</span>
+
         You can contact me at deannajs@umich.edu.
         Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
     </p>
