--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <img src="profilepic.jpg" class="profilepic"></img>
     <p id="about me">
-        <span class="section_header">about me</span>
+        <span class="section_header">about me <br> </span>
 
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
@@ -37,7 +37,7 @@
     </p>
 
     <p id="experience">
-        <span class="section_header">experience</span>
+        <span class="section_header">experience <br> </span>
         work <br>
         TOYOTA Summer 2019 <br>
         UMTRI (University of Michigan Transportation Research Institute) Summer 2018<br>
@@ -55,14 +55,14 @@
     </p>
 
     <p id="projects">
-        <span class="section_header">projects</span>
+        <span class="section_header">projects <br> </span>
 
         video game portfolio
         ezscan
     </p>
 
     <p id="skills">
-        <span class="section_header">skills</span>
+        <span class="section_header">skills <br> </span>
 
         relevant coursework: video game development, machine learning, web systems, operating systems, computer security
         languages:
@@ -70,7 +70,7 @@
     </p>
 
     <p id="interests">
-        <span class="section_header">interests</span>
+        <span class="section_header">interests <br> </span>
 
         piano
         cello - michigan pops orchestra
@@ -82,7 +82,7 @@
 
 
     <p id="contact">
-        <span class="section_header">contact</span>
+        <span class="section_header">contact <br> </span>
 
         You can contact me at deannajs@umich.edu.
         Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
