--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </span>
 </div>
 
-<nav>
+<!-- <nav>
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
     <a href="#projects">projects</a>
     <a href="#skills">skills</a>
     <a href="#interests">interests</a>
     <a href="#contact">contact</a>
-</nav>
+</nav> -->
 
 <body>
 
