--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         I am interested in video game development and machine learning.
     </p>
 
-    <img src="profilepic.jpg" class="workpic"></img>
+    <!-- <img src="profilepic.jpg" class="workpic"></img> -->
     <p id="experience">
         <span class="section_header">experience <br><br> </span>
         work <br>
