--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
 </nav> -->
 
 <body>
-
-    <p id="about me">
+    <div>
         <img src="profilepic.jpg" class="profilepic"></img>
 
-        <span class="section_header">about me <br><br> </span>
+        <p class="about me">
+            <span class="section_header">about me <br><br> </span>
 
-        Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
-        <br><br>
-        I'm currently looking for full-time software engineering roles! 
-        I am interested in video game development and machine learning.
-    </p>
-
+            Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+            <br><br>
+            I'm currently looking for full-time software engineering roles! 
+            I am interested in video game development and machine learning.
+        </p>
+    </div>
+    
+    <img src="profilepic.jpg" class="workpic"></img>
     <p id="experience">
-        <img src="profilepic.jpg" class="workpic"></img>
 
         <span class="section_header">experience <br><br> </span>
         work <br>
