--- a/index.html
+++ b/index.html
@@ -38,26 +38,28 @@
         </p>
     </div>
     
-    <img src="profilepic.jpg" class="workpic"></img>
-    <p id="experience">
+    <div>
+        <img src="profilepic.jpg" class="workpic"></img>
+        <p id="experience">
+            <span class="section_header">experience <br><br> </span>
+            work <br>
+            TOYOTA Summer 2019 <br>
+            UMTRI (University of Michigan Transportation Research Institute) Summer 2018<br>
+            University of Michigan S.M. Wu Manufacturing Research Center Summer 2017 <br>
 
-        <span class="section_header">experience <br><br> </span>
-        work <br>
-        TOYOTA Summer 2019 <br>
-        UMTRI (University of Michigan Transportation Research Institute) Summer 2018<br>
-        University of Michigan S.M. Wu Manufacturing Research Center Summer 2017 <br>
+            leadership <br>
+            society of women engineers <br>
+                corporate & alumni relations - student coordinator & alumni officer (2018-2019) <br>
+                career fair - receptions chair (2018-2019) <br>
+                career fair - publicity chair (2019-2020) <br>
 
-        leadership <br>
-        society of women engineers <br>
-            corporate & alumni relations - student coordinator & alumni officer (2018-2019) <br>
-            career fair - receptions chair (2018-2019) <br>
-            career fair - publicity chair (2019-2020) <br>
+            volunteer <br>
+            ann arbor summer festival <br>
+            aid summer <br>
+        </p>
+    </div>
 
-        volunteer <br>
-        ann arbor summer festival <br>
-        aid summer <br>
-    </p>
-
+    
     <p id="projects">
         <span class="section_header">projects <br><br> </span>
 
