--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <div>
-        <img src="profilepic.jpg" class="workpic"></img>
+        <!-- <img src="profilepic.jpg" class="workpic"></img> -->
         <p>
             <span class="section_header">experience <br><br> </span>
             work <br>
