--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </p>
     
     <div>
-        <img src="profilepic.jpg" class="workpic"></img>
+        <!-- <img src="profilepic.jpg" class="workpic"></img> -->
     </div>
-    
+
     <p>
         <span class="section_header">experience <br><br> </span>
         work <br>
