--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </p>
     
     <div>
-        <!-- <img src="profilepic.jpg" class="workpic"></img> -->
+        <img src="profilepic.jpg" class="workpic"></img>
     </div>
 
     <p>
