--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 </nav> -->
 
 <body>
-    <div>
+    <div class="side_images">
+        <img src="profilepic.jpg" class="profilepic"></img>
     </div>
 
     <p>
-        <img src="profilepic.jpg" class="profilepic"></img>
 
         <span class="section_header">about me <br><br> </span>
 
