--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </div>
 
     <p>
-
         <span class="section_header">about me <br><br> </span>
 
         Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
@@ -39,8 +38,8 @@
         I am interested in video game development and machine learning.
     </p>
     
-    <div>
-        <img src="profilepic.jpg" class="workpic"></img>
+    <div class="side_images">
+        <!-- <img src="profilepic.jpg" class="workpic"></img> -->
     </div>
 
     <p>
