--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 </nav> -->
 
 <body>
-    <div class="side_images">
         <img src="profilepic.jpg" class="profilepic"></img>
-    </div>
 
+    <div>
     <p>
         <span class="section_header">about me <br><br> </span>
 
@@ -37,11 +36,11 @@
         I'm currently looking for full-time software engineering roles! 
         I am interested in video game development and machine learning.
     </p>
+</div>
     
-    <div class="side_images">
-        <!-- <img src="profilepic.jpg" class="workpic"></img> -->
-    </div>
+        <img src="profilepic.jpg" class="workpic"></img>
 
+        <div>
     <p>
         <span class="section_header">experience <br><br> </span>
         work <br>
@@ -59,6 +58,7 @@
         ann arbor summer festival <br>
         aid summer <br>
     </p>
+</div>
 
     
     <p>
