--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         I am interested in video game development and machine learning.
     </p>
     
+    <br style="clear:both" />
+
 
     <p>
         <img src="profilepic.jpg" class="workpic"></img>
