--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         I am interested in video game development and machine learning.
     </p>
     
+    <!-- clear the float to prevent cascading images -->
     <br style="clear:both" />
 
     <img src="profilepic.jpg" class="workpic"></img>
@@ -56,13 +57,16 @@
         aid summer <br>
     </p>
 
-    
+    <br style="clear:both" />
+
     <p>
         <span class="section_header">projects <br><br> </span>
 
         video game portfolio
         ezscan
     </p>
+
+    <br style="clear:both" />
 
     <p>
         <span class="section_header">skills <br><br> </span>
@@ -71,6 +75,8 @@
         languages:
         software:
     </p>
+
+    <br style="clear:both" />
 
     <p>
         <span class="section_header">interests <br><br> </span>
@@ -82,6 +88,7 @@
         foreign languages 
     </p>
 
+    <br style="clear:both" />
 
 
     <p>
