--- a/index.html
+++ b/index.html
@@ -95,8 +95,28 @@
         <span class="section_header">contact <br><br> </span>
 
         You can contact me at deannajs@umich.edu.
-        Alternatively, fill out this form right here (not here yet 0_0) to send me an email.
+        Alternatively, fill out this form right here to send me an email!
     </p>
+
+    <form>
+        <!-- What is the name attribute?
+            This name attribute can be used to reference the element 
+            in a JavaScript. For form elements it is also used as a 
+            reference when the data is submitted -->
+
+        <label for="name">Your name</label><br>
+        <input type="text" id="name" name="name"><br>
+
+        <label for="email">Your email</label><br>
+        <input type="text" id="email" name="email"><br>
+
+        <label for="message">Message</label><br>
+        <input type="text" id="message" name="message"><br>
+
+        <input type="submit" value="Submit">
+        <!-- <form action="/action_page.php"> -->
+
+    </form>
 
 
 </body>
