--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <input type="text" id="message" name="message"><br>
 
         <input type="submit" value="Submit">
-        <!-- <form action="/action_page.php"> -->
+        <form action="/send_email.php">
 
     </form>
 
