--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
     <p>
         <span class="section_header">projects <br><br> </span>
-
-        video game portfolio
-        ezscan
+        personal website: html/css, javascript, php
+        video game portfolio: c# and Unity Game Engine (insert link)
+        ezscan: swift
     </p>
 
     <br style="clear:both" />
@@ -98,24 +98,22 @@
         Alternatively, fill out this form right here to send me an email!
     </p>
 
-    <form>
+    <form action="/send_email.php" method="POST">
         <!-- What is the name attribute?
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
             reference when the data is submitted -->
 
-        <label for="name">Your name</label><br>
+        <label for="name">Name</label><br>
         <input type="text" id="name" name="name"><br>
 
-        <label for="email">Your email</label><br>
+        <label for="email">Email</label><br>
         <input type="text" id="email" name="email"><br>
 
         <label for="message">Message</label><br>
         <input type="text" id="message" name="message"><br>
 
-        <input type="submit" value="Submit">
-        <form action="/send_email.php">
-
+        <input type="submit" value="Send Email!">
     </form>
 
 
