--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <label for="message">Message</label><br>
         <input type="text" id="message" name="message"><br>
 
-        <input type="submit" name="submit" value="Send Email!">
+        <input type="submit" value="Send Email!">
     </form>
 
 
