--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Alternatively, fill out this form right here to send me an email!
     </p>
 
-    <form>
+    <form action="send_email.php">
         <!-- What is the name attribute?
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
