--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </span>
 </div>
 
+<div class="arrow">
+    SCROLL DOWN
+</div>
+
 <!-- <nav>
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
