--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </span>
 </div>
 
-<div class="arrow"></div>
-<div>SCROLL DOWN</div>
+<div class="arrow"> SCROLL DOWN </div>
 
 <!-- <nav>
     <a href="#about me">about me</a>
