--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </span>
 </div>
 
-<div class="arrow"> SCROLL DOWN </div>
+<div class="arrow"> <br> SCROLL DOWN </div>
 
 <!-- <nav>
     <a href="#about me">about me</a>
