--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="banner">
-    <span id="name"> DEANNA SHI <br> </span>
+    <span id="name"> DEANNA SHIH <br> </span>
     <span id="subname">
     bse computer science <br>
     university of michigan '20
