--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>
         <span class="section_header">about me <br><br> </span>
 
-        Hi! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+        Hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
         I'm currently looking for full-time software engineering roles! 
         I am interested in video game development and machine learning.
