--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="banner">
-    <span id="name"> DEANNA SHIH <br> </span>
+    <span id="name"> DEANNA SHI <br> </span>
     <span id="subname">
     bse computer science <br>
     university of michigan '20
@@ -34,7 +34,9 @@
         Hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
         I'm currently looking for full-time software engineering roles! 
-        I am interested in video game development and machine learning.
+        I have experience with ___ . <br>
+        I am particularly interested in video game development and machine learning. 
+        Please contact me if you 
     </p>
     
     <!-- clear the float to prevent cascading images -->
