--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     </span>
 </div>
 
+<button>
 <div class="arrow"> <br> SCROLL DOWN </div>
+</button>
 
-<!-- <nav>
+<nav>
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
     <a href="#projects">projects</a>
     <a href="#skills">skills</a>
     <a href="#interests">interests</a>
     <a href="#contact">contact</a>
-</nav> -->
+</nav>
 
 <body>
     <img src="profilepic.jpg" class="profilepic" ></img>
