--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 
+<!-- Load JavaScript -->
+<script type="text/javascript" src="deanna.js"></script>
+
 <head>
     <title>Deanna</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
@@ -16,7 +19,7 @@
     </span>
 </div>
 
-<button>
+<button id="button">
 <div class="arrow"> <br> SCROLL DOWN </div>
 </button>
 
@@ -32,7 +35,7 @@
 <body>
     <img src="profilepic.jpg" class="profilepic" ></img>
     <p>
-        <span class="section_header">about me <br><br> </span>
+        <span class="section_header" id="about me">about me <br><br> </span>
 
         Hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
@@ -127,7 +130,6 @@
 
 </body>
 
-<!-- Load JavaScript -->
-<!-- <script type="text/javascript" src="deanna.js"></script> -->
+
 
 </html>
