--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </span>
 </div>
 
-<button id="button">
-<div class="arrow"> <br> SCROLL DOWN </div>
-</button>
+<div class="arrow"> <br> <button id="button">
+    SCROLL DOWN </button>
+</div>
 
 <nav>
     <a href="#about me">about me</a>
