--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </span>
 </div>
 
-<div class="arrow"> <br> <button id="button">
-    SCROLL DOWN </button>
+<div class="arrow"> <br> 
+    <button id="scroll_button"> SCROLL DOWN </button>
 </div>
 
 <!-- <nav>
@@ -37,12 +37,12 @@
     <p>
         <span class="section_header" id="about me">about me <br><br> </span>
 
-        Hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+        hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
-        I'm currently looking for full-time software engineering roles! 
-        I have experience with ___ . <br>
+        I'm currently looking for full-time software engineering roles. 
+        I have experience with . <br>
         I am particularly interested in video game development and machine learning. 
-        Please contact me if you 
+        Please feel free to contact me at deannajs@umich.edu if you would like to get in touch! 
     </p>
     
     <!-- clear the float to prevent cascading images -->
