--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     </span>
 </div>
 
-<button id="scroll_button"> 
 <div class="arrow"> <br> 
-    SCROLL DOWN 
+    <button id="scroll_button"> SCROLL DOWN </button>
 </div>
-</button>
 
 <!-- <nav>
     <a href="#about me">about me</a>
