--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     </span>
 </div>
 
+<button id="scroll_button">
 <div class="arrow"> <br> 
-    <button id="scroll_button"> SCROLL DOWN </button>
+     SCROLL DOWN
 </div>
+</button>
+
 
 <!-- <nav>
     <a href="#about me">about me</a>
