--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     </span>
 </div>
 
-<button id="scroll_button">
-    <div class="arrow"> <br> 
-        SCROLL DOWN
-    </div>
-</button>
+<div>
+    <button id="scroll_button">
+        <span id="scroll_down_arrow">╲╱</span>
+        <p id ="scroll_down_text">SCROLL DOWN</p>
+    </button>
+</div>
 
 
 <!-- <nav>
