--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 
 <div>
     <button id="scroll_button">
-        <span id="scroll_down_arrow">╲╱</span>
-        <p id ="scroll_down_text">SCROLL DOWN</p>
+        <span id="arrow">╲╱</span>
+        <p id="arrow_text">SCROLL DOWN</p>
     </button>
 </div>
+<!-- <button id="scroll_button">
+    <div class="arrow"> <br> 
+        SCROLL DOWN
+    </div>
+</button> -->
 
 
 <!-- <nav>
