--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </span>
 </div>
 
-<div>
+<div id="scroll_down">
     <button id="scroll_button">
         <span id="arrow">╲╱</span>
         <p id="arrow_text">SCROLL DOWN</p>
