--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button id="scroll_button">
         <span id="arrow">╲╱</span>
         <br><br><br>
-        <p id="arrow_text">SCROLL DOWN</p>
+        SCROLL DOWN
     </button>
 </div>
 <!-- <button id="scroll_button">
