--- a/index.html
+++ b/index.html
@@ -24,21 +24,16 @@
         <span id="arrow">╲╱</span>
     </button>
 </div>
-<!-- <button id="scroll_button">
-    <div class="arrow"> <br> 
-        SCROLL DOWN
-    </div>
-</button> -->
 
 
-<!-- <nav>
+<nav>
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
     <a href="#projects">projects</a>
     <a href="#skills">skills</a>
     <a href="#interests">interests</a>
     <a href="#contact">contact</a>
-</nav> -->
+</nav>
 
 <body>
     <img src="profilepic.jpg" class="profilepic" ></img>
@@ -48,9 +43,9 @@
         hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
         I'm currently looking for full-time software engineering roles. 
-        I have experience with . <br>
+        I have experience working in the area of driver-assistance systems. <br>
         I am particularly interested in video game development and machine learning. 
-        Please feel free to contact me at deannajs@umich.edu if you would like to get in touch! 
+        Please contact me at deannajs@umich.edu if you would like to get in touch! 
     </p>
     
     <!-- clear the float to prevent cascading images -->
