--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <br><br>
         I'm currently looking for full-time software engineering roles. 
         I have experience working in the area of driver-assistance systems. <br>
-        I am particularly interested in video game development and machine learning. 
-        Please contact me at deannajs@umich.edu if you would like to get in touch! 
+        I am particularly interested in video game development and machine learning. <br>
+        Please contact me at deannajs@umich.edu (or use the form at the bottom) if you would like to get in touch! :)
     </p>
     
     <!-- clear the float to prevent cascading images -->
