--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 
 <nav>
-    <a href="#about me">about me</a>
-    <a href="#experience">experience</a>
-    <a href="#projects">projects</a>
-    <a href="#skills">skills</a>
-    <a href="#interests">interests</a>
-    <a href="#contact">contact</a>
+    <li><a href="#about me">about me</a></li>
+    <li><a href="#experience">experience</a></li>
+    <li><a href="#projects">projects</a></li>
+    <li><a href="#skills">skills</a></li>
+    <li><a href="#interests">interests</a></li>
+    <li><a href="#contact">contact</a></li>
 </nav>
 
 <body>
