--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
         Alternatively, fill out this form right here to send me an email!
     </p>
 
-    <form action="send_email.php">
+    <!-- <form action="send_email.php"> -->
         <!-- What is the name attribute?
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
             reference when the data is submitted -->
 
-        <label for="name">Name</label><br>
+        <!-- <label for="name">Name</label><br>
         <input type="text" id="name" name="name"><br>
 
         <label for="email">Email</label><br>
@@ -127,7 +127,7 @@
         <input type="text" id="message" name="message"><br>
 
         <input type="submit" value="Send Email!">
-    </form>
+    </form> -->
 
 
 
