--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 
 <nav>
-    <li><a href="#about me">about me</a></li>
-    <li><a href="#experience">experience</a></li>
-    <li><a href="#projects">projects</a></li>
-    <li><a href="#skills">skills</a></li>
-    <li><a href="#interests">interests</a></li>
-    <li><a href="#contact">contact</a></li>
+    <a href="#about me">about me</a>
+    <a href="#experience">experience</a>
+    <a href="#projects">projects</a>
+    <a href="#skills">skills</a>
+    <a href="#interests">interests</a>
+    <a href="#contact">contact</a>
 </nav>
 
 <body>
@@ -53,11 +53,24 @@
 
     <img src="profilepic.jpg" class="workpic"></img>
     <p>
-        <span class="section_header">experience <br><br> </span>
+        <span class="section_header" id="experience">experience <br><br> </span>
         work <br>
-        TOYOTA Summer 2019 <br>
-        UMTRI (University of Michigan Transportation Research Institute) Summer 2018<br>
-        University of Michigan S.M. Wu Manufacturing Research Center Summer 2017 <br>
+        <li>
+            Toyota
+            Summer 2019
+
+        </li>
+
+        <li>
+            UMTRI (U of M Transportation Research Institute)
+            Summer 2018
+
+        </li>
+
+        <li>
+            S.M. Wu Manufacturing Research Center
+            Summer 2017
+        </li>
 
         leadership <br>
         society of women engineers <br>
@@ -73,7 +86,7 @@
     <br style="clear:both" />
 
     <p>
-        <span class="section_header">projects <br><br> </span>
+        <span class="section_header" id="projects">projects <br><br> </span>
         personal website: html/css, javascript, php
         video game portfolio: c# and Unity Game Engine (insert link)
         ezscan: swift
@@ -82,7 +95,7 @@
     <br style="clear:both" />
 
     <p>
-        <span class="section_header">skills <br><br> </span>
+        <span class="section_header" id="skills">skills <br><br> </span>
 
         relevant coursework: video game development, machine learning, web systems, operating systems, computer security
         languages:
@@ -92,7 +105,7 @@
     <br style="clear:both" />
 
     <p>
-        <span class="section_header">interests <br><br> </span>
+        <span class="section_header" id="interests">interests <br><br> </span>
 
         piano
         cello - michigan pops orchestra
@@ -105,7 +118,7 @@
 
 
     <p>
-        <span class="section_header">contact <br><br> </span>
+        <span class="section_header" id="contact">contact <br><br> </span>
 
         You can contact me at deannajs@umich.edu. <br>
         Alternatively, fill out this form right here to send me an email!
