--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div id="scroll_down">
     <button id="scroll_button">
         <span id="arrow">╲╱</span>
+        filler text for height
     </button>
 </div>
 
