--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="scroll_down">
     <button id="scroll_button">
         <span id="arrow">╲╱</span>
-        filler text for height
+        <span id="arrow_text">filler text for height</span>
     </button>
 </div>
 
