--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
         I'm currently looking for full-time software engineering roles. 
-        I have experience working in the area of driver-assistance systems.
-        I am particularly interested in video game development and machine learning. <br><br>
+        I have work experience in the area of driver-assistance systems.
+        Additionally, I am interested in video game development and machine learning. <br><br>
         Please contact me at deannajs@umich.edu (or use the form at the bottom) if you would like to get in touch! :)
     </p>
     
