--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="pig.png">
 </head>
 
+<div id="navbar">
 <nav>
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
@@ -19,6 +20,7 @@
     <a href="#interests">interests</a>
     <a href="#contact">contact</a>
 </nav>
+</div>
 
 <div class="banner">
     <span id="name"> DEANNA SHIH <br> </span>
