--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="icon" href="pig.png">
 </head>
 
+<div class="header">
+    <h2>Scroll Indicator</h2>
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
+</div>
+
 <div id="navbar">
 <nav>
     <a href="#about me">about me</a>
