--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <!-- Load JavaScript -->
 <script type="text/javascript" src="deanna.js"></script>
+<!-- Load jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <head>
     <title>Deanna</title>
