--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
     <a href="#projects">projects</a>
-    <a href="#skills">skills</a>
-    <a href="#interests">interests</a>
+    <a href="#skills_and_intersts">skills & intersts</a>
     <a href="#contact">contact</a>
 </nav>
 </div>
@@ -85,10 +84,6 @@
             corporate & alumni relations - student coordinator & alumni officer (2018-2019) <br>
             career fair - receptions chair (2018-2019) <br>
             career fair - publicity chair (2019-2020) <br>
-
-        volunteer <br>
-        ann arbor summer festival <br>
-        aid summer <br>
     </p>
 
     <br style="clear:both" />
@@ -103,18 +98,14 @@
     <br style="clear:both" />
 
     <p>
-        <span class="section_header" id="skills">skills <br><br> </span>
-
+        <span class="section_header" id="skills_and_interests">skills & intersts<br><br> </span>
+        skills:
         relevant coursework: video game development, machine learning, web systems, operating systems, computer security
-        languages:
-        software:
-    </p>
+        languages: mandarin chinese, french, japanese
+        software: Unity, Solidworks (CAD)
 
-    <br style="clear:both" />
-
-    <p>
-        <span class="section_header" id="interests">interests <br><br> </span>
-
+        <br><br>
+        interests:
         piano
         cello - michigan pops orchestra
         carillon - carillon guild
