--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
     <a href="#projects">projects</a>
-    <a href="#skills_and_intersts">skills & intersts</a>
+    <a href="#skills_and_intersts">skills & interests</a>
     <a href="#contact">contact</a>
 </nav>
 </div>
@@ -98,7 +98,7 @@
     <br style="clear:both" />
 
     <p>
-        <span class="section_header" id="skills_and_interests">skills & intersts<br><br> </span>
+        <span class="section_header" id="skills_and_interests">skills & interests<br><br> </span>
         skills:
         relevant coursework: video game development, machine learning, web systems, operating systems, computer security
         languages: mandarin chinese, french, japanese
