--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
     <a href="#projects">projects</a>
-    <a href="#skills_and_intersts">skills & interests</a>
+    <a href="#skills_and_interests">skills & interests</a>
     <a href="#contact">contact</a>
 </nav>
 </div>
