--- a/index.html
+++ b/index.html
@@ -64,35 +64,57 @@
         <span class="section_header" id="experience">experience <br><br> </span>
         work <br>
 
-            Toyota
-            Summer 2019
+            Toyota R&D <br>
+            Summer Co-op <br>
+            May – Aug 2019 <br> <br>
+                ● Developed map-matching algorithm using curvature of GPS trajectory to improve location accuracy for
+                automated driving
+                ● Built interface to generate and validate scenario files used to simulate automated driving under different
+                conditions
 
 
 
+            UMTRI (UofM Transportation Research Institute) <br>
+            Research Assistant <br>
+            May – Aug 2018 <br><br>
+                ● Co-authored a literature review on haptic feedback in vehicles to assess ADAS systems
+                ● Provided guidance and answered questions about using softwares as an instructional assistant during
+                two-week Human Factors Engineering Short Course
+                ● Analyzed data on the usability of human-machine interfaces in vehicles
 
-            UMTRI (U of M Transportation Research Institute)
-            Summer 2018
 
-
-
-            S.M. Wu Manufacturing Research Center
-            Summer 2017
-
+            S.M. Wu Manufacturing Research Center <br>
+            Research Assistant <br>
+            Jun – Aug 2017 <br><br> <br>
+                ● Manufactured silicone arteries and veins for doctors to practice aneurysm surgery
+                ● Modeled experiment setups in Solidworks to support presentations of findings to lab members
+            
 
         leadership <br>
-        society of women engineers <br>
+        Society of Women Engineers <br>
+        Sep 2017 – Apr 2020 <br>
             corporate & alumni relations - student coordinator & alumni officer (2018-2019) <br>
-            career fair - receptions chair (2018-2019) <br>
-            career fair - publicity chair (2019-2020) <br>
+            career fair - receptions chair (2018) <br>
+            career fair - publicity chair (2019) <br>
     </p>
 
     <br style="clear:both" />
 
     <p>
         <span class="section_header" id="projects">projects <br><br> </span>
-        personal website: html/css, javascript, php
-        video game portfolio: c# and Unity Game Engine (insert link)
-        ezscan: swift
+        Personal Website <br>
+        Sep 2020 <br>
+        built with: HTML/CSS, Javascript, php <br><br>
+
+        Video Game Portfolio <br>
+        Jan – Apr 2020 <br>
+        built with: C# and <a href="https://unity.com/">Unity Game Engine</a>
+        built three games: remastered Legend of Zelda, mini game, collaborative game
+        
+        EZscan <br>
+        June 2019 <br>
+        built with: swift <br>
+        a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet
     </p>
 
     <br style="clear:both" />
@@ -100,17 +122,13 @@
     <p>
         <span class="section_header" id="skills_and_interests">skills & interests<br><br> </span>
         skills:
-        relevant coursework: video game development, machine learning, web systems, operating systems, computer security
-        languages: mandarin chinese, french, japanese
-        software: Unity, Solidworks (CAD)
+        relevant coursework: video game development, machine learning, web systems, operating systems, computer security <br>
+        programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
+        software: Unity, Solidworks <br>
 
         <br><br>
-        interests:
-        piano
-        cello - michigan pops orchestra
-        carillon - carillon guild
-        photography
-        foreign languages 
+        interests: piano, cello, carillon, photography/videography, journaling, stationery, pigs <br>
+        foreign languages: mandarin chinese, french, japanese, korean (fun fact: i learned a decent amount of japanese and korean from watching tv shows!)
     </p>
 
     <br style="clear:both" />
